# promp-ros

./: README.md
promp_ros/: .gitignore  CMakeLists.txt  package.xml  setup.py
promp_ros/data/: accelerated.csv  comparison.csv  comparison_target.csv  curved.csv  data_ral  force.csv  proposed_data.csv  straight.csv  time.xlsx
promp_ros/node/: otp_estimator_node.py  vel_control_node.py
promp_ros/scripts/data_process/: data_plot.py  pre_process.py  sync_range.py
promp_ros/src/: message_filter.cpp  promp.py
promp_ros/src/promp_ros/: promp.py
promp_ros/training/data_process/: sync_range.py
promp_ros/training/plug/: hrc_traj_0.csv  hrc_traj_10.csv  hrc_traj_11.csv  hrc_traj_12.csv  hrc_traj_13.csv  hrc_traj_14.csv  hrc_traj_15.csv  hrc_traj_16.csv  hrc_traj_17.csv  hrc_traj_18.csv  hrc_traj_19.csv  hrc_traj_2.csv  hrc_traj_20.csv  hrc_traj_3.csv  hrc_traj_4.csv  hrc_traj_7.csv  hrc_traj_8.csv  hrc_traj_9.csv
promp_ros/training/plug/fix_time_front_back/: hrc_traj_10.csv  hrc_traj_12.csv  hrc_traj_3.csv  hrc_traj_4.csv  hrc_traj_8.csv
promp_ros/training/plug/fix_time_front_back/sp/: hrc_traj_1.csv  hrc_traj_13.csv
promp_ros/training/plug/fix_time_front_back/t/: hrc_traj_0.csv  hrc_traj_1.csv  hrc_traj_10.csv  hrc_traj_11.csv  hrc_traj_12.csv  hrc_traj_13.csv  hrc_traj_2.csv  hrc_traj_3.csv  hrc_traj_4.csv  hrc_traj_5.csv  hrc_traj_6.csv  hrc_traj_7.csv  hrc_traj_8.csv  hrc_traj_9.csv
promp_ros/training/plug/fix_time_left_right/: hrc_traj_4.csv  hrc_traj_6.csv  hrc_traj_7.csv
promp_ros/training/plug/fix_time_left_right/t/: hrc_traj_0.csv  hrc_traj_1.csv  hrc_traj_10.csv  hrc_traj_2.csv  hrc_traj_3.csv  hrc_traj_4.csv  hrc_traj_5.csv  hrc_traj_6.csv  hrc_traj_7.csv  hrc_traj_8.csv  hrc_traj_9.csv
promp_ros/training/plug/fix_time_up_down/: hrc_traj_12.csv  hrc_traj_3.csv  hrc_traj_7.csv  hrc_traj_8.csv  hrc_traj_9.csv
promp_ros/training/plug/mixed/: hrc_traj_0.csv  hrc_traj_1.csv  hrc_traj_10.csv  hrc_traj_13.csv  hrc_traj_15.csv  hrc_traj_21.csv  hrc_traj_22.csv  hrc_traj_24.csv  hrc_traj_25.csv  hrc_traj_28.csv  hrc_traj_29.csv  hrc_traj_30.csv  hrc_traj_32.csv  hrc_traj_34.csv  hrc_traj_5.csv  hrc_traj_9.csv
promp_ros/training/plug/random/: hrc_traj_1.csv  hrc_traj_10.csv  hrc_traj_11.csv  hrc_traj_12.csv  hrc_traj_13.csv  hrc_traj_14.csv  hrc_traj_15.csv  hrc_traj_16.csv  hrc_traj_17.csv  hrc_traj_18.csv  hrc_traj_19.csv  hrc_traj_2.csv  hrc_traj_20.csv  hrc_traj_3.csv  hrc_traj_4.csv  hrc_traj_5.csv  hrc_traj_6.csv  hrc_traj_7.csv  hrc_traj_8.csv  hrc_traj_9.csv
promp_ros/training/plug/up_down/: hrc_traj_0.csv  hrc_traj_1.csv  hrc_traj_10.csv  hrc_traj_2.csv  hrc_traj_3.csv  hrc_traj_4.csv  hrc_traj_5.csv  hrc_traj_6.csv  hrc_traj_7.csv  hrc_traj_8.csv  hrc_traj_9.csv
promp_ros/training/trained/: PHI.csv  weight_cov.csv  weight_mean.csv
(+76 files in other folders)
